<resources>
    <string name="app_name">Animal Guessing Game</string>

    <!--TextView_Guess the Picture!-->
    <string name="maintitle_text">Guess the Picture!</string>
    <!--TextView_Round count-->
    <string name="roundcount_text"></string>
    <!--TextView_What's your guess?-->
    <string name="whatsyourguess_text">What\'s your guess?</string>
    <!--User guess-->
    <string name="userguess_edit">Your Guess</string>
    <!--Submit button-->
    <string name="submit_button">Submit</string>
    <!--Clue button-->
    <string name="clue_button">Clue</string>

    <!--Text that change-->
        <!--Clue button - next round-->
        <string name="next_round_button">Next Round</string>

        <!--"What's your guess?" TextView-->
        <string name="guessed_right_textview">You guessed right!</string>
        <string name="guess_again_textview">Guess again!</string>
        <string name="fox_guessed_wrong_textview">You guessed wrong! The answer is \"Fox.\"</string>
</resources>
