<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.angellam.animalguessinggame.MainActivity">

    <!--Guess the Picture!-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maintitle_text"
        android:textSize="30sp"
        android:textColor="@color/blue"
        android:id="@+id/guessThePictureTextView"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp" />

    <!--Round count-->
    <TextView
        android:text="@string/roundcount_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/roundCountTextView"
        tools:text="Round 1"
        android:layout_marginTop="3dp"
        app:layout_constraintTop_toBottomOf="@+id/guessThePictureTextView"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <!--What's your guess?-->
    <TextView
        android:text="@string/whatsyourguess_text"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/whatsYourGuessTextView"
        tools:text="What's your guess?"
        android:layout_marginTop="3dp"
        app:layout_constraintTop_toBottomOf="@+id/roundCountTextView"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <!--User guess-->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/userguess_edit"
        android:ems="10"
        android:id="@+id/userGuessEditText"
        app:layout_constraintRight_toLeftOf="@+id/submitButton"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/submitButton"
        app:layout_constraintTop_toBottomOf="@+id/whatsYourGuessTextView" />

    <!--Submit-->
    <Button
        android:text="@string/submit_button"
        android:background="@color/lightBlue"
        android:textColor="@color/white"
        android:onClick="submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/submitButton"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@+id/whatsYourGuessTextView"
        android:layout_marginTop="8dp" />

    <!--Animal image-->
    <ImageView
        android:layout_width="307dp"
        android:layout_height="215dp"
        app:srcCompat="@drawable/fox1"
        android:id="@+id/animalImageView"
        android:scaleType="fitCenter"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/submitButton" />

    <!--Clue Button-->
    <Button
        android:text="@string/clue_button"
        android:textSize="30sp"
        android:background="@color/lightBlue"
        android:textColor="@color/white"
        android:onClick="cluesButton"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingLeft="55dp"
        android:paddingRight="55dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/clueButton"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/animalImageView" />


</android.support.constraint.ConstraintLayout>
